<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A9898"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="252dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/milspec_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sloganView"
        app:srcCompat="@drawable/logo_1" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="180dp"
        android:layout_height="83dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/milspec_title"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sloganView"
        android:layout_width="222dp"
        android:layout_height="61dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        android:text="@string/slogan_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tab_household"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:background="#FF9800"
        android:rotation="-90"
        android:text="@string/tab1_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0B0000"
        android:translationX="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tab_Work"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="#2196F3"
        android:rotation="-90"
        android:text="@string/tab3_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0B0000"
        android:translationX="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_kids" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tab_kids"
        android:layout_width="96dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="#4CAF50"
        android:rotation="-90"
        android:text="@string/tab2_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0B0000"
        android:translationX="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_household" />

</androidx.constraintlayout.widget.ConstraintLayout>