<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A9898"
    tools:context=".fragment_main">

    <ImageView
        android:id="@+id/imageView_Logo"
        android:layout_width="253dp"
        android:layout_height="252dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/milspec_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Slogan"
        app:srcCompat="@drawable/logo_1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="180dp"
        android:layout_height="83dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/milspec_title"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Slogan"
        android:layout_width="222dp"
        android:layout_height="61dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        android:text="@string/slogan_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_Title" />

    <View
        android:id="@+id/divider_Title"
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:foregroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Title" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_TabBar_Reset"
        android:name="com.example.milspecchecklist.TabBar"
        android:layout_width="107dp"
        android:layout_height="640dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_tab_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>